# nonebot_plugin_r6s

./: .gitattributes  .gitignore  .pdm.toml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.run/: pytest in tests.run.xml
nonebot_plugin_r6s/: 1.yaml  __init__.py  config.py  image.py  image_test.py  matcher.py  net.py  new_image.py  player.py  r6s_data.py  r6s_ground.py  r6s_r6db.py  r6s_tracker.py  search.py  test.py  version.py  模板.py
nonebot_plugin_r6s/adapters/: siegeapi.py
nonebot_plugin_r6s/fonts/: sarasa-term-sc-nerd.ttc
nonebot_plugin_r6s/plugins/: __init__.py  new_image.py
nonebot_plugin_r6s/plugins/adapters/: player.py  r6s_data.py  r6s_ground.py  r6s_r6db.py  r6s_stats.py  r6s_tracker.py  siegeapi.py
nonebot_plugin_r6s/templates/: test.jinja
nonebot_plugin_r6s/tests/: utils.py
nonebot_plugin_r6s/utils/: __init__.py  database_model.py  image.py  platform.py  res.py
