[tool.pdm.dev-dependencies]
dev = [
    "nonebot2[fastapi]>=2.3.2",
    "nb-cli>=1.4.1",
    "nonebug>=0.3.7",
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-plugin-datastore>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.1",
    "gevent>=24.2.1",
    "bump-my-version>=0.25.4",
    "black~=24.4",
    "ruff~=0.4",
    "isort~=5.13",
    "pre-commit~=3.7",
    "pytest-mock>=3.14.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "nonebot_plugin_r6s"
version = "0.5.0"
description = "A R6s plugin for Nonebot2"
authors = [
    { name = "BalconyJH", email = "73932916+BalconyJH@users.noreply.github.com" },
    { name = "abrahumlink", email = "307887491@qq.com" },
]
dependencies = [
    "nonebot2>=2.3.2",
    "ujson<6.0.0,>=4.0.2",
    "Pillow<10.0,>=8.4",
    "nonebot-plugin-localstore>=0.6.0",
    "lxml>=4.9.2",
    "aiofiles>=23.1.0",
    "httpx>=0.27.0",
    "nonebot-plugin-htmlrender>=0.3.3",
    "aiohttp>=3.10.3",
    "pydantic-settings>=2.4.0",
    "siegeapi>=6.3.4",
    "emoji>=1.6.3",
    "nonebot-plugin-alconna>=0.49.0",
    "nonebot-plugin-orm[asyncpg]>=0.7.6",
    "nonebot-plugin-session>=0.3.2",
    "skia-python>=128.0b9",
    "pydantic<2.9.0",
    "cryptography>=43.0.1",
    "nonebot-plugin-uninfo>=0.3.0",
]
requires-python = ">=3.10"
license = { text = "GPLv3" }
readme = "README.md"
keywords = ["nonebot", "nonebot2", "r6s"]

[project.urls]
homepage = "https://github.com/abrahum/nonebot_plugin_r6s"
documentation = "https://github.com/abrahum/nonebot_plugin_r6s#readme"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = ["nonebot_plugin_r6s"]
plugin_dirs = []
builtin_plugins = []

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["nonebot_plugin_r6s", "tests"]
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RUF", # Ruff-specific rules
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "UP037", # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=nonebot_plugin_r6s --cov-report=term-missing"
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.uv]
dev-dependencies = [
    "nb-cli>=1.4.1",
    "nonebug>=0.3.7",
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-plugin-datastore>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.1",
    "gevent>=24.2.1",
    "bump-my-version>=0.25.4",
    "pre-commit>=3.7.0",
    "pytest-mock>=3.14.0",
    "black>=24.8.0",
    "ruff>=0.6.4",
    "isort>=5.13.2",
]
